--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "nodemon": "^3.1.7",
     "outfit": "link:@@fountsource/outfit",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-google-recaptcha": "^3.1.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
