--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.1.0",
+    "axios": "^1.7.7",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "icons": "^1.0.0",
@@ -24,7 +25,6 @@
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
