--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "outfit": "link:@@fountsource/outfit",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.2"
+    "react-i18next": "^15.0.2",
+    "react-parallax-tilt": "^1.7.245"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
