Traducciones e imágenes webp

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,8 +1,17 @@
 [
   {
+    "title": "Portfolio",
+    "category": "Proyecto personal",
+    "imageSrc": "projects/portfolio.webp",
+    "description": "En este proyecto he tratado de crear un portfolio sencillo que me sirva como muestra de cara a la búsqueda de empleo. La parte de backend ha sido desarrollada con Node.js, consta de un pequeño servidor conectado a una base de datos MySql. En la parte de front se ha utilizado React y TypeScript con Css Modules. He utilizado Netlify para el despliegue del front y Railway para el despliegue del back.",
+    "skills": ["react", "vite", "express", "nodejs", "mysql", "typescript", "css"],
+    "gitLinkFront": "https://github.com/jorgenovorodriguez/Portfolio",
+    "gitLinkBack": "https://github.com/jorgenovorodriguez/portfolioBackend"
+  },
+  {
     "title": "Gestión industrial",
     "category": "Profesional",
-    "imageSrc": "projects/industria.jpeg",
+    "imageSrc": "projects/industria.webp",
     "description": "Proyecto profesional, no puedo dar muchos detalles ni mostrar código por compromiso de confidencialidad. La finalidad de la aplicación es optimizar los procesos internos de instalaciones de frío industrial y comercial. En front usamos React con CSS, librerías de distintos tipos, servicios de geolocalización, consumo de servicios de IA en Python, y servicios de back en Java. ",
     "skills": ["react", "vite", "redux", "typescript", "css", "bootstrap"],
     "gitLinkFront": "https://github.com/gradhoc-jnovo"
@@ -18,24 +27,15 @@
   {
     "title": "Callcenter",
     "category": "Profesional",
-    "imageSrc": "projects/callcenteria.jpeg",
+    "imageSrc": "projects/callcenteria.webp",
     "description": "Proyecto profesional, no puedo dar muchos detalles ni mostrar código por compromiso de confidencialidad. En este caso el proyecto consiste en una app gestionar indicencias en un Callcenter. En front usamos React con CSS, Tailwind, comunicación con WebSockets, consumo de servicios de IA en Python, y servicios de back en Java. ",
     "skills": ["react", "vite", "redux", "typescript", "css", "tailwind"],
     "gitLinkFront": "https://github.com/gradhoc-jnovo"
   },
   {
-    "title": "Portfolio",
-    "category": "Proyecto personal",
-    "imageSrc": "projects/portfolio.webp",
-    "description": "En este proyecto he tratado de crear un portfolio sencillo que me sirva como muestra de cara a la búsqueda de empleo. La parte de backend ha sido desarrollada con Node.js, consta de un pequeño servidor conectado a una base de datos MySql. En la parte de front se ha utilizado React y TypeScript con Css Modules. He utilizado Netlify para el despliegue del front y Railway para el despliegue del back.",
-    "skills": ["react", "vite", "express", "nodejs", "mysql", "typescript", "css"],
-    "gitLinkFront": "https://github.com/jorgenovorodriguez/Portfolio",
-    "gitLinkBack": "https://github.com/jorgenovorodriguez/portfolioBackend"
-  },
-  {
     "title": "Red Social",
     "category": "Personal",
-    "imageSrc": "projects/redsocial.png",
+    "imageSrc": "projects/redsocial.webp",
     "description": "Proyecto final de Bootcamp, se trata de una red social deonde los usuarios pueden interactuar de diversas formas. La idea era crear un app donde se pudieran poner en contacto tatuadores y estudios. Los usuarios tienen roles, pueden publicar fotos o vídeos para mostrar su trabajo, añadiendo ubicación, categorías... Para el backend se uso Node y Express conectado a una base de datos MySql, en la parte de frontend se uso React con CSS.",
     "skills": ["react", "vite", "express", "nodejs", "mysql", "css"],
     "gitLinkFront": "https://github.com/jorgenovorodriguez/RedSocialFrontEnd",
