--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "outfit": "link:@@fountsource/outfit",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.0.2",
     "react-toastify": "^10.0.6"
   },
@@ -26,6 +27,7 @@
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
